gtk-v2/src/config.c: Lots of new code to handle setting/getting of config
  values in config window.
gtk-v2/src/gtk2proto.h: Rebuilt.
gtk-v2/src/interface.c: Rebuilt by glade-2
gtk-v2/src/interface.h: Rebuilt by glade-2
gtk-v2/src/main.c: Add call to config_init() to initialize config window.
MSW 2006-02-27

------------------------------------------------------------------------------

Apply patch #1424583 (IPv6 patch for client) courtesy  Christoph Hohmann -
(reboot)
 common/client.c
 common/config.h.in
Ryo 2006-02-26

Changes for 1.9.0:

Fix server cache which was broken for some reason.
 common/metaserver.c
Ryo 2006-02-25

Apply patch #1433271 (code-cleanup) by Stefan Huehner: Add const and static,
remove unused variables
---
Affected files: common/{client.c,commands.c,image.c,init.c,item.c,metaserver.c},
common/{misc.c,newsocket.c,player.c,proto.h,rcs-id.h,script.c,script.h},
gtk/{config.c,gtkproto.h,gx11.c,image.c,inventory.c,keys.c,map.c,png.c},
gtk/{rcs-id.h,sdl.c,sound.c,text.c,win32/soundsdef.h},
gtk-v2/src/{main.c,sdl.c}, x11/{png.c,rcs-id.h,sound.c,x11.c,xutil.c}
Andreas Kirschbaum 2006-02-23

More improvements to the gtk-v2 client:
- Add spell selection window similar to that in the gtk-v1 client.
- Make it so that clicking on the headers in the metaserver and keybinding
  selection windows will result in table be sorted by that header.
--
*/Makefile.in: Rebuilt by automake.
aclocal.m4: Updated by aclocal.
gtk-v2/TODO: Remove things that have been done, add other things mentioned
  on mailing list that should be done.
gtk-v2/gtk-v2.glade: Updated with new spell selection window.
gtk-v2/src/Makefile.am: Add spells.c file
gtk-v2/src/spells.c: File that handles spell selection window.
gtk-v2/src/callbacks.h: Updated by glade
gtk-v2/src/gtk2proto.h: rebuilt
gtk-v2/src/interface.c: Updated by glade.
gtk-v2/src/interface.h: Updated by glade.
gtk-v2/src/keys.c: Add necessary calls to enable sorting of table by
  clicking on headers.